SandBox-2/force-app/main/default/objects/Account/fields/Account_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Account_Loyalty__c</fullName>
    <description>IF (R12_Vivotif_Market_Share__c  &gt;=10.0 &amp;&amp; R12_Vivotif_Market_Share__c &lt;30.0, &quot;Leaning Typhim&quot;,
IF (R12_Vivotif_Market_Share__c  &gt;=30.0 &amp;&amp; R12_Vivotif_Market_Share__c &lt;70.0, &quot;Mixed Loyalty&quot;,
IF (R12_Vivotif_Market_Share__c  &gt;=70.0 &amp;&amp; R12_Vivotif_Market_Share__c &lt;90.0, &quot;Leaning Vivotif&quot;,
IF (R12_Vivotif_Market_Share__c  &gt;=90.0, &quot;Vivotif Loyal&quot;,null
)))))</description>
    <formula>IF(
  (R12_Total_Typhoid_Fever_Vaccine__c &lt;&gt; 0), 
IF(
  (R12_Vivotif_Total__c /  R12_Total_Typhoid_Fever_Vaccine__c )*100  &lt; 10.0, &quot;Typhim Loyal&quot;,
IF(
  (R12_Vivotif_Total__c /  R12_Total_Typhoid_Fever_Vaccine__c )*100  &gt;=10.0 &amp;&amp; 
  (R12_Vivotif_Total__c /  R12_Total_Typhoid_Fever_Vaccine__c )*100  &lt;30.0, &quot;Leaning Typhim&quot;,
IF(
  (R12_Vivotif_Total__c /  R12_Total_Typhoid_Fever_Vaccine__c )*100  &gt;=30.0 &amp;&amp; 
  (R12_Vivotif_Total__c /  R12_Total_Typhoid_Fever_Vaccine__c )*100  &lt;70.0, &quot;Mixed Loyalty&quot;,
IF(
  (R12_Vivotif_Total__c /  R12_Total_Typhoid_Fever_Vaccine__c )*100  &gt;=70.0 &amp;&amp; 
  (R12_Vivotif_Total__c /  R12_Total_Typhoid_Fever_Vaccine__c )*100 &lt;90.0, &quot;Leaning Vivotif&quot;,
IF(
  (R12_Vivotif_Total__c /  R12_Total_Typhoid_Fever_Vaccine__c )*100  &gt;=90.0, &quot;Vivotif Loyal&quot;,
null
))))),&#39;N/A&#39;)</formula>
    <label>Account Loyalty</label>
    <type>Text</type>
</CustomField>