SandBox-2/force-app/main/default/objects/Account/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <label>Account Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual Product Loyal</fullName>
            </value>
            <value>
                <fullName>Vaxchora Supporter</fullName>
            </value>
            <value>
                <fullName>Vivotif Supporter</fullName>
            </value>
            <value>
                <fullName>Travel Vaccinator</fullName>
            </value>
            <value>
                <fullName>PaxVax Naïve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>