SandBox-2/force-app/main/default/objects/Account/fields/Account_Volume_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Volume_Type__c</fullName>
    <label>Account Volume Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator Only</fullName>
            </value>
            <value>
                <fullName>Prescriber Only</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>