SandBox-2/force-app/main/default/objects/Account/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Link to directly edit account to be used on search result pages and reports</description>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/e&quot;, &quot;Edit&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Edit Account</inlineHelpText>
    <label>Action</label>
    <type>Text</type>
</CustomField>