SandBox-2/force-app/main/default/objects/Account/fields/Class_of_Trade__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Trade__c</fullName>
    <label>Class of Trade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Pharmacy</fullName>
            </value>
            <value>
                <fullName>IHN</fullName>
            </value>
            <value>
                <fullName>College/University</fullName>
            </value>
            <value>
                <fullName>Corporate account</fullName>
            </value>
            <value>
                <fullName>physician</fullName>
            </value>
            <value>
                <fullName>FSS</fullName>
            </value>
            <value>
                <fullName>Health Department</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>