SandBox-2/force-app/main/default/objects/Account/fields/Conversion_Promo_Target__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Promo_Target__c</fullName>
    <label>Conversion Promo Target</label>
    <length>50</length>
    <type>Text</type>
</CustomField>