SandBox-2/force-app/main/default/objects/Account/fields/CORP_PARENT_IMS_ORG_ID__c.field-meta.xml
<CustomField>
    <fullName>CORP_PARENT_IMS_ORG_ID__c</fullName>
    <label>CORP_PARENT_IMS_ORG_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>