SandBox-2/force-app/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>field to add direct customer number</description>
    <label>Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>