SandBox-2/force-app/main/default/objects/Account/fields/CY_Vaxchora_Doses_Indirect_YTD__c.field-meta.xml
<CustomField>
    <fullName>CY_Vaxchora_Doses_Indirect_YTD__c</fullName>
    <label>CY Vaxchora Doses Indirect YTD</label>
    <summarizedField>Daily_Sales_Data__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Daily_Sales_Data__c.ShipTo_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Daily_Sales_Data__c.ShipTo_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2020</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Daily_Sales_Data__c.ShipTo_Type__c</field>
        <operation>equals</operation>
        <value>Indirect</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Daily_Sales_Data__c.Is_Deleted__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Daily_Sales_Data__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>