SandBox-2/force-app/main/default/objects/Account/fields/DDD_Outlet_ID_3__c.field-meta.xml
<CustomField>
    <fullName>DDD_Outlet_ID_3__c</fullName>
    <label>DDD Outlet ID 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>