SandBox-2/force-app/main/default/objects/Account/fields/DDD_Outlet_ID__c.field-meta.xml
<CustomField>
    <fullName>DDD_Outlet_ID__c</fullName>
    <externalId>true</externalId>
    <label>DDD Outlet ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>