SandBox-2/force-app/main/default/objects/Account/fields/DHC_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>DHC_Account_Name__c</fullName>
    <label>DHC_Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>