SandBox-2/force-app/main/default/objects/Account/fields/FY2017_Vivotif_doses__c.field-meta.xml
<CustomField>
    <fullName>FY2017_Vivotif_doses__c</fullName>
    <description>Jan-Dec 2017 Vivotif doses</description>
    <label>FY2017_Vivotif doses</label>
    <summarizedField>Sales_Data__c.Doses_Month_0__c</summarizedField>
    <summaryFilterItems>
        <field>Sales_Data__c.Name</field>
        <operation>equals</operation>
        <value>VIVOTIF BERNA</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Data__c.Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2017</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Sales_Data__c.Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2017</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Data__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>