SandBox-2/force-app/main/default/objects/Account/fields/IMS_DDD_ID_2__c.field-meta.xml
<CustomField>
    <fullName>IMS_DDD_ID_2__c</fullName>
    <label>DDD Outlet ID 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>