SandBox-2/force-app/main/default/objects/Account/fields/Interest_in_Cholea__c.field-meta.xml
<CustomField>
    <fullName>Interest_in_Cholea__c</fullName>
    <label>Interest in Cholea</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>