SandBox-2/force-app/main/default/objects/Account/fields/Last_IMS_Sales_Activity_date__c.field-meta.xml
<CustomField>
    <fullName>Last_IMS_Sales_Activity_date__c</fullName>
    <inlineHelpText>This field shows the last recorded activity of IMS sales data.</inlineHelpText>
    <label>Last IMS Sales Activity Date</label>
    <summarizedField>Sales_Data__c.Date__c</summarizedField>
    <summaryForeignKey>Sales_Data__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>