SandBox-2/force-app/main/default/objects/Account/fields/Legacy_ERP_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_ERP_ID__c</fullName>
    <label>Legacy ERP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>