SandBox-2/force-app/main/default/objects/Account/fields/Main_Objection_to_Vivotif__c.field-meta.xml
<CustomField>
    <fullName>Main_Objection_to_Vivotif__c</fullName>
    <label>Main Objection to Vivotif</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Practicality</fullName>
            </value>
            <value>
                <fullName>Convenience</fullName>
            </value>
            <value>
                <fullName>Travel Destination</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>