SandBox-2/force-app/main/default/objects/Account/fields/Main_Reason_for_Vivotif__c.field-meta.xml
<CustomField>
    <fullName>Main_Reason_for_Vivotif__c</fullName>
    <label>Main Reason for Vivotif</label>
    <length>20</length>
    <type>Text</type>
</CustomField>