SandBox-2/force-app/main/default/objects/Account/fields/ME_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>ME_Source_ID__c</fullName>
    <externalId>true</externalId>
    <label>ME Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>