SandBox-2/force-app/main/default/objects/Account/fields/National_Accounts__c.field-meta.xml
<CustomField>
    <fullName>National_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked for national</description>
    <label>National Accounts</label>
    <type>Checkbox</type>
</CustomField>