SandBox-2/force-app/main/default/objects/Account/fields/Personal_Note__c.field-meta.xml
<CustomField>
    <fullName>Personal_Note__c</fullName>
    <description>It is your own personal note. Please don&#39;t enter any &quot;Log a Call&quot; information here.</description>
    <inlineHelpText>It is your own personal note. Please don&#39;t enter any &quot;Log a Call&quot; information here.</inlineHelpText>
    <label>Personal Note</label>
    <type>TextArea</type>
</CustomField>