SandBox-2/force-app/main/default/objects/Account/fields/Pricing_Contract_Sign_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Contract_Sign_Date__c</fullName>
    <inlineHelpText>Pricing Campaign_2018</inlineHelpText>
    <label>Pricing Contract Sign Date</label>
    <type>Date</type>
</CustomField>