SandBox-2/force-app/main/default/objects/Account/fields/Purchase_Channel__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Channel__c</fullName>
    <label>Purchase Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Direct and Wholesaler</fullName>
            </value>
            <value>
                <fullName>Direct and Distributor</fullName>
            </value>
            <value>
                <fullName>Wholesaler and Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>