SandBox-2/force-app/main/default/objects/Account/fields/R12_Total_Typhoid_Fever_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>R12_Total_Typhoid_Fever_Vaccine__c</fullName>
    <formula>R12_Typhim_Total__c +  R12_Vivotif_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R12 Total Typhoid Fever Vaccine</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>