SandBox-2/force-app/main/default/objects/Account/fields/R12_Typhim_Single_Pre_fill_Syringe__c.field-meta.xml
<CustomField>
    <fullName>R12_Typhim_Single_Pre_fill_Syringe__c</fullName>
    <label>R12 Typhim Single Pre-fill Syringe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>