SandBox-2/force-app/main/default/objects/Account/fields/R12_Typhim_Total__c.field-meta.xml
<CustomField>
    <fullName>R12_Typhim_Total__c</fullName>
    <formula>R12_Typhim_Single_Pre_fill_Syringe__c +  R12_Typhim_VI_20_Dose__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R12 Typhim Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>