SandBox-2/force-app/main/default/objects/Account/fields/R12_Typhim_VI_20_Dose__c.field-meta.xml
<CustomField>
    <fullName>R12_Typhim_VI_20_Dose__c</fullName>
    <label>R12 Typhim VI 20 Dose</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>