SandBox-2/force-app/main/default/objects/Account/fields/R12_Vivotif_Indirect__c.field-meta.xml
<CustomField>
    <fullName>R12_Vivotif_Indirect__c</fullName>
    <label>R12 Vivotif Indirect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>