SandBox-2/force-app/main/default/objects/Account/fields/R12_Vivotif_Market_Share__c.field-meta.xml
<CustomField>
    <fullName>R12_Vivotif_Market_Share__c</fullName>
    <formula>IF(R12_Total_Typhoid_Fever_Vaccine__c &lt;&gt; 0,
(R12_Vivotif_Total__c / R12_Total_Typhoid_Fever_Vaccine__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R12 Vivotif Market Share %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>