SandBox-2/force-app/main/default/objects/Account/fields/R12_Vivotif_Total__c.field-meta.xml
<CustomField>
    <fullName>R12_Vivotif_Total__c</fullName>
    <formula>R12_Vivotif_Direct__c  +  R12_Vivotif_Indirect__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R12 Vivotif Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>