SandBox-2/force-app/main/default/objects/Account/fields/Reason_for_Cholera_Interest__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cholera_Interest__c</fullName>
    <label>Reason for Cholera Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Patient Centric</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>