SandBox-2/force-app/main/default/objects/Account/fields/Reporting_type__c.field-meta.xml
<CustomField>
    <fullName>Reporting_type__c</fullName>
    <description>This is for reports.</description>
    <label>Reporting_Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed Outlet</fullName>
            </value>
            <value>
                <fullName>College and Universities</fullName>
            </value>
            <value>
                <fullName>Corporate PPH</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Franchise PPH</fullName>
            </value>
            <value>
                <fullName>FSS</fullName>
            </value>
            <value>
                <fullName>HD</fullName>
            </value>
            <value>
                <fullName>IHN</fullName>
            </value>
            <value>
                <fullName>Inactive-PPH Corporate</fullName>
            </value>
            <value>
                <fullName>Inactive-PPH Franchise</fullName>
            </value>
            <value>
                <fullName>Kaiser</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Pharmacy</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Inactive_PPH</fullName>
                <isActive>false</isActive>
                <label>Inactive-PPH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>