SandBox-2/force-app/main/default/objects/Account/fields/SalesForce_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SalesForce_Account_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesForce_Account ID</label>
    <type>Text</type>
</CustomField>