SandBox-2/force-app/main/default/objects/Account/fields/SAP_ID_2__c.field-meta.xml
<CustomField>
    <fullName>SAP_ID_2__c</fullName>
    <label>SAP ID 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>