SandBox-2/force-app/main/default/objects/Account/fields/SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_ID__c</fullName>
    <label>SAP ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>