SandBox-2/force-app/main/default/objects/Account/fields/Source_Data__c.field-meta.xml
<CustomField>
    <fullName>Source_Data__c</fullName>
    <label>Source Data</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DDD</fullName>
            </value>
            <value>
                <fullName>Xponent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>