SandBox-2/force-app/main/default/objects/Account/fields/ST__c.field-meta.xml
<CustomField>
    <fullName>ST__c</fullName>
    <label>IMS ST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>