SandBox-2/force-app/main/default/objects/Account/fields/Target_Designation__c.field-meta.xml
<CustomField>
    <fullName>Target_Designation__c</fullName>
    <label>Target Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FSS</fullName>
            </value>
            <value>
                <fullName>ISR</fullName>
            </value>
            <value>
                <fullName>Kaiser</fullName>
            </value>
            <value>
                <fullName>RAM</fullName>
            </value>
            <value>
                <fullName>Unassigned</fullName>
            </value>
            <value>
                <fullName>Zip PHY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>