SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_AffiliationsACO__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_AffiliationsACO__c</fullName>
    <label>DHC ACO Affiliations</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>