SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_AvgLengthOfStay__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_AvgLengthOfStay__c</fullName>
    <label>DHC Avg. Length of Stay</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>