SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_EMR_Vendor_Inpatient__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_EMR_Vendor_Inpatient__c</fullName>
    <label>DHC EMR Vendor Inpatient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>