SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_HIEAffiliations__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_HIEAffiliations__c</fullName>
    <label>DHC HIE Affiliations</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>