SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_Hospital_Name__c</fullName>
    <description>DefinitiveHC Hospital Name</description>
    <inlineHelpText>Hospital Name</inlineHelpText>
    <label>DHC Hospital Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>