SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_Hospital_Profile__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_Hospital_Profile__c</fullName>
    <description>DefinitiveHC Hospital Profile</description>
    <inlineHelpText>DefinitiveHC Hospital Profile</inlineHelpText>
    <label>DHC Provider Profile</label>
    <type>Url</type>
</CustomField>