SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_HQCity__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_HQCity__c</fullName>
    <label>DHC City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>