SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_MeaningfulUseStatus__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_MeaningfulUseStatus__c</fullName>
    <label>DHC Meaningful Use Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>