SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_MedicareProviderNumber__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_MedicareProviderNumber__c</fullName>
    <label>DHC Medicare Provider Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>