SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_NetPatientRev__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_NetPatientRev__c</fullName>
    <label>DHC Net Patient Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>