SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_Network_Name__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_Network_Name__c</fullName>
    <description>Name of the network to which the hospital belongs to.</description>
    <label>DHC Network Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>