SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_NumBeds__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_NumBeds__c</fullName>
    <description>Number of Beds in the hospital</description>
    <label>DHC # of Beds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>