SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_NumDischarges__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_NumDischarges__c</fullName>
    <label>DHC # of Discharges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>