SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_NumMedicareBeds__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_NumMedicareBeds__c</fullName>
    <label>DHC # of Medicare Beds</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>