SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_NumOperatingRooms__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_NumOperatingRooms__c</fullName>
    <label>DHC # of Operating Rooms</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>