SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_OwnershipStatus__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_OwnershipStatus__c</fullName>
    <label>DHC Ownership Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>