SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_Parent_NetworkID__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_Parent_NetworkID__c</fullName>
    <description>Parent Network ID</description>
    <label>DHC Parent Network ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>