SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_PayorMixPctMedicare__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_PayorMixPctMedicare__c</fullName>
    <label>DHC Payor Mix % Medicare</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>