SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DefHC_Website__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_Website__c</fullName>
    <label>DHC Provider Website</label>
    <type>Url</type>
</CustomField>