SandBox-2/force-app/main/default/objects/Account/fields/texcellency__DHC_ID_Holder__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DHC_ID_Holder__c</fullName>
    <label>DHC ID Holder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>